# solidhs

./: LICENSE  run-test.sh  solidhs.cabal
src/Graphics/: Solidhs.hs
src/Graphics/Solidhs/: Solidhs.hs
tests/src/: MainTest.hs
